Update to David Saah's bio

--- a/resources/html/team.html
+++ b/resources/html/team.html
@@ -170,7 +170,7 @@
                         <div class="col-md-8 col-sm-12">
                             <h3><a href="#" data-featherlight="#saah">David Saah, PhD</a></h3>
                             <p class="role mb-0">Project Principal Investigator</p>
-                            <p>Spatial Informatics Group</p>
+                            <p>Managing Principal, Spatial Informatics Group and Professor and Director of Geospatial Analysis Lab at University of San Francisco</p>
                             <a href="https://www.linkedin.com/in/davidsaah"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a>
                             <a class="btn learn-more" href="#" data-featherlight="#saah">Learn More</a>
                             <div class="lightbox" id="saah">
@@ -182,7 +182,7 @@
                                         <div class="col-sm-9">
                                             <h2>David Saah, PhD <a href="https://www.linkedin.com/in/davidsaah"><img class="linkedin-icon" src="images/icons/linkedin-icon@2x.jpg" alt="linkedin link"></a></h2>
                                              <p class="role mb-0">Project Principal Investigator</p>
-                                             <p>Spatial Informatics Group</p>
+                                             <p>Managing Principal, Spatial Informatics Group and Professor and Director of Geospatial Analysis Lab at University of San Francisco</p>
                                              <div class="line yellow"></div>
                                              <p>
                                                  Dr. Saah is the Principal Investigator for the project and is responsible for oversight of technical aspects of the project. Dr. Saah has been broadly trained as an environmental scientist with expertise in a number of areas including: landscape ecology, ecosystem ecology, hydrology, geomorphology, ecosystem modeling, natural hazard modeling, remote sensing, geographic information systems (GIS) and geospatial analysis. He has used these skills to conduct research primarily at the landscape level in a variety of systems. Dr. Saah has participated in research projects throughout the United States and Internationally. His academic research uses integrated geospatial science for multi-scale mapping, monitoring and modeling of environmental spatial heterogeneity, particularly in riparian, savanna, and forest ecosystems. These efforts include quantification of change in landscape pattern, investigating the linkages between pattern and processes, and understanding the pattern-process dynamic within different environmental management regimes. To complement this, Dr. Saah’s consulting research interest and experience include: developing holistic decision support systems for resource management, assessing natural hazards, and quantifying ecosystem service valuation. In addition, all of his research addresses access, availability, and accuracy of geospatial and environmental datasets, and scale in natural resource and environmental research. Dr. Saah is committed to producing high quality research projects that integrate the most current science and technology. He is dedicated to the accurate dissemination of results from these endeavors through innovative presentations, publications, and workshops.
