--- a/resources/html/~head.html
+++ b/resources/html/~head.html
@@ -1,4 +1,4 @@
-<meta name="robots" content="noindex, nofollow">
+<meta name="robots" content="index, follow">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet"
