addition of header meta tags

--- a/resources/html/data.html
+++ b/resources/html/data.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Data - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Download data that is being used to support the Pyregence project.">
+
+<!-- Content -->
 <div id="content" class="data-page">
     <header class="d-flex">
         <div class="container d-flex">
