--- a/resources/html/documents.html
+++ b/resources/html/documents.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Documents - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Download documents that are being used to support the Pyregence project.">
+
+<!-- Content -->
 <div id="content" class="documents-page">
     <header class="d-flex">
         <div class="container d-flex">
