--- a/resources/html/extreme-weather.html
+++ b/resources/html/extreme-weather.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Extreme Weather Workgroup - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Determining weather conditions and other associated factors with large wildfires in the past.">
+
+<!-- Content -->
 <div id="content" class="wg wg-extreme-weather">
     <header>
         <div class="background">
