--- a/resources/html/fire-behavior.html
+++ b/resources/html/fire-behavior.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Fire Behavior Workgroup - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Advancing research on fuel mapping and fire spread to inform next generation wildfire models.">
+
+<!-- Content -->
 <div id="content" class="wg wg-fire-behavior">
     <header>
         <div class="background">
