--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Forecast Tools Workgroup - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Forecasting wildfire activity in California and beyond. During wildfires, situational awareness is vital to maintain electric utility infrastructure.">
+
+<!-- Content -->
 <div id="content" class="wg wg-forecast-tools">
     <header>
         <div class="background">
