--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
+<meta name="description"
+    content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
+
+<!-- Content -->
 <div id="content" class="home">
     <div class="jumbotron header-image mb-0 panel1">
         <div class="container">
