--- a/resources/html/not-found.html
+++ b/resources/html/not-found.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>404 Not Found - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Page not found.">
+
+<!-- Content -->
 <div id="content">
     <div class="container my-5 text-center">
         <div class="row py-5">
