--- a/resources/html/scenario-analyses.html
+++ b/resources/html/scenario-analyses.html
@@ -1,3 +1,9 @@
+<!-- Head Tags -->
+<title>Scenario Analyses Workgroup - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Analyzing wildfire scenarios under climate change to inform planning for a resilient grid.">
+
+<!-- Content -->
 <div id="content" class="wg wg-scenario-analyses">
     <header>
         <div class="background">
