--- a/resources/html/team.html
+++ b/resources/html/team.html
@@ -1,3 +1,12 @@
+<!-- Head Tags -->
+<title>Team - Pyregence Wildfire Risk Models</title>
+<meta name="description"
+    content="Consortium partners are from leading research institutions from industry, academia, and government.">
+<link href="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.css" type="text/css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/team-filter.js"></script>
+
+<!-- Content -->
 <div id="content" class="team-page">
     <header class="d-flex mb-5">
         <div class="container d-flex">
@@ -1346,6 +1355,3 @@
         </div>
     </section>
 </div>
-<link href="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.css" type="text/css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/featherlight@1.7.14/release/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
-<script src="js/team-filter.js"></script>
