Add David Marvin to Forecast Tools.

--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -209,6 +209,19 @@
                         </p>
                     </div>
                 </div>
+                <div class="col-lg-3 col-md-4 col-sm-6 px-3 my-3 d-flex">
+                    <div class="indv p-3">
+                        <img class="headshot mb-4" src="images/team/david-marvin.jpg" alt="David Marvin">
+                        <h3 class="text-center">David Marvin, PhD</h3>
+                        <p class="mb-1 text-center">
+                            Salo Sciences
+                        </p>
+                        <div class="line yellow small line-center"></div>
+                        <p class="text-center">
+                            CEO and Co-founder
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
