Update url and page title

--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -32,7 +32,7 @@
                             <a href="/data" class="nav-link">data</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
-                            <a href="/near-term-forecast" class="nav-link">tools</a>
+                            <a href="/forecast" class="nav-link">tools</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-team" class="nav-item">
                             <a href="/team" class="nav-link">team</a>
