--- a/resources/html/forecast-tools.html
+++ b/resources/html/forecast-tools.html
@@ -12,13 +12,13 @@
         </div>
         </div>
         <div class="container mb-5">
-            <h1 class="display-4">Forecast Tools</h1>
+            <h1 class="display-4">Wildfire Forecast Models</h1>
             <p class="subtitle text-center">
                 Forecasting wildfire activity in California and beyond
             </p>
             <div class="line gray line-center"></div>
             <p>
-                During wildfires, situational awareness is vital to maintain electric utility infrastructure. The Pyregence Project will provide free and open source access to data, model outputs and web-based risk forecasting tools that are based on the state of wildfire science. This fire activity and risk forecasting system has been in development over the last decade and through the Pyregence Project will be made available to wildfire practitioners. The Pyregence web-based, interactive interface displays forecasts for active fires and fire risk at a five-day horizon. An API allows for flexible integration with an organization’s unique and existing workflows to assist in tactical fire and ignition risk decision-making.
+                During wildfires, situational awareness is vital. Pyregence provides access to fire forecasting tools that are based on the state of wildfire science. This fire activity and risk forecasting system has been in development for over 10 years and through the Pyregence Project is being made publicly available. The Pyregence web-based, interactive interface displays forecasts for active fires and fire risk at a five-day horizon. An API allows for flexible integration with an organization’s unique and existing workflows to assist in tactical fire and ignition risk decision-making.
             </p>
         </div>
     </header>
@@ -26,20 +26,20 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-8">
-                    <h2 class="display-4">
-                        Pyregence Near-term Forecasting Tools
+                    <h2>
+                        Goals
                     </h2>
-                    <p class="mb-5">
-                        Electric utilities currently use fire models that are based on dated wildfire science. The Pyregence Project is providing free and open source access to cutting-edge wildfire science and tools that provide for timely and accurate forecasts of wildfire spread and potential impacts to the electric utility grid and communities.
-                    </p>
-                    <h3>Goal</h3>
-                    <p class="subtitle my-1">
-                        Develop the next generation of models to provide near-term risk forecasts at a 0-to-5 day temporal scale and at a fine (circa 30m) spatial scale to simulate spread of extant fire ignitions and enhance current models with best practice in wildfire risk modeling.
-                    </p>
-                    <hr>
-                    <p class="subtitle my-1">
-                        Integrate a decision-support tool into operating procedures at IOUs.
-                    </p>
+                    <ul>
+                        <li>
+                            Enhance existing fire spread models to create scalable next-generation fire spread models reflecting recent developments in fire science and computing power
+                        </li>
+                        <li>
+                            Disseminate timely, accurate, and easy to understand forecasts of wildland fire spread to the public, utilities, first responders, government agencies, and other stakeholders
+                        </li>
+                        <li>
+                            Forecast risk from fires that could be ignited over the next 5 days to communities, infrastructure, and natural resources so that appropriate mitigation actions can be undertaken
+                        </li>
+                    </ul>
                 </div>
                 <div class="col-md-4 text-center">
                     <img class="p-4" src="images/icons/pyregence-tools-icon-round@2x.png" alt="Pyregence tools icon">
