--- a/resources/html/home.html
+++ b/resources/html/home.html
@@ -1,5 +1,5 @@
 <!-- Head Tags -->
-<title>Pyregence - Wildfire Risk Models for a Safe & Resilient Grid</title>
+<title>Pyregence - Wildfire Forecast Models</title>
 <meta name="description"
     content="The next generation of open source wildfire risk models to support decision making for a more safe and resilient electric grid.">
 
@@ -10,7 +10,7 @@
             <div class="row">
                 <div class="col-md-9">
                     <h1 class="title text-white">
-                        Free and open access to the next generation of wildfire forecast models
+                        Creating the next generation of wildfire forecast models
                     </h1>
                 </div>
                 <div class="col-md-7">
@@ -18,7 +18,7 @@
                         Pyregence consortium is founded on open science and technology principles, employing inclusivity and collaboration to tackle complex challenges.
                     </p>
                     <div>
-                        <a href="#consortium" class="btn border-yellow text-white">Learn More</a>
+                        <a href="/forecast" class="btn border-yellow text-white">Fire Forecasts</a>
                     </div>
                 </div>
             </div>
@@ -59,7 +59,7 @@
                                     </div>
                                 </div>
                                 <div class="box-content clearfix">
-                                    <h3 class="text-center">Fire Behavior</h3>
+                                    <h3 class="text-center">Fire Science</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
                                         Advancing science on fuel mapping and fire spread to inform next generation wildfire models.
@@ -83,7 +83,7 @@
                                     </div>
                                 </div>
                                 <div class="box-content clearfix">
-                                    <h3 class="text-center">Forecast Tools</h3>
+                                    <h3 class="text-center">Fire Forecasts</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
                                         Forecasting wildfire activity in California and elsewhere.
@@ -102,10 +102,10 @@
                                     </div>
                                 </div>
                                 <div class="box-content clearfix">
-                                    <h3 class="text-center">Scenario Analyses</h3>
+                                    <h3 class="text-center">Climate Change & Fire</h3>
                                     <div class="yellow-line small my-3"></div>
                                     <p class="text-center">
-                                        Analyzing wildfire scenarios under climate change to inform planning for a resilient electric grid.
+                                        Analyzing wildfire scenarios under climate change to inform planning in the latter half of this century.
                                     </p>
                                     <div class="text-center readmore mt-auto">
                                         <a href="/scenario-analyses">Read More<img src="images/arrow-right-solid.png"></a>
@@ -132,12 +132,12 @@
         <div class="row justify-content-center">
             <div class="col-md-6 px-4">
                 <p class="text-justify">
-                    Wildfire threats are ever increasing with substantial changes in fire behaviour driven by higher fuel loads, more frequent extreme weather events and continued human development in the wildland urban interface. Organizations need better operational and strategic information to understand changing wildfire risks and implement effective protection and adaptation measures. Access to this critical information is blocked by multiple barriers including fragmented silos of science and technology and black box software.
+                    Wildfire threats are ever increasing with substantial changes in fire behavior driven by higher fuel loads, more frequent extreme weather events and continued human development in the wildland urban interface. Organizations need better operational and strategic information to understand changing wildfire risks and implement effective protection and adaptation measures.
                 </p>
             </div>
             <div class="col-md-6 px-4">
                 <p class="text-justify">
-                    The Pyregence Consortium provides free and open source access to operational and strategic wildfire information based on the next generation of wildfire models. At an operational level, the consortium implements best practice science and technology to forecast wildfire activity. At a strategic level, wildfire scenario analyses will be produced to inform future wildfire risk and California’s 5th Climate Change Assessment. The ‘open source’ collaboration brings together initiatives and leading researchers from 18 institutions representing industry, academia, and government in an effort to transform how wildfire mitigation and adaptation measures are implemented.
+                    The Pyregence Consortium provides free access to cutting edge operational and strategic wildfire models. At an operational level, the consortium implements best practice science and technology to forecast wildfire activity. At a strategic level, wildfire scenario analyses will be produced to inform future wildfire risk and California’s 5th Climate Change Assessment. This collaboration brings together initiatives and leading researchers from 18 institutions representing industry, academia, and government in an effort to transform how wildfire mitigation and adaptation measures are implemented.
                 </p>
             </div>
         </div>
@@ -154,7 +154,7 @@
                     <h3 class="text-white my-3">Extreme Weather</h3>
                     <div class="white-line"></div>
                     <p class="text-white my-3">
-                        Electric utilities need better weather forecasts to improve situational awareness of wildfire threats to and from the grid. Pyregence will support electric utilities by developing a methodology for optimal location of weather stations and piloting an upper-air profiler over a fire season to scout for early signs of impending extreme wind events.
+                        Pyregence will improve situational awareness during extreme weather events by developing a methodology for optimal location of weather stations and piloting an upper-air profiler over a fire season to scout for early signs of impending extreme wind events.
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -175,7 +175,7 @@
                     <h3 class="text-white">Advance Wildfire Science</h3>
                     <div class="white-line my-3"></div>
                     <p class="text-white">
-                        Current fire models fail to address the fundamental physics behind contemporary wildfire events. This team aims to deliver fundamental scientific advances to give rise to the next generation of wildfire models, including a new fuel mapping technique and fire spread model based on fire physics.
+                        Some fire models do not address the fundamental physics behind contemporary wildfire events. This team aims to deliver fundamental scientific advances to give rise to the next generation of wildfire models, including a new fuel mapping technique and fire spread model based on fire physics.
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -196,7 +196,7 @@
                     <h3 class="text-white">Wildfire Forecasts</h3>
                     <div class="white-line my-3"></div>
                     <p class="text-white">
-                        Electric utilities and other organizations face numerous barriers to access operational information to mitigate wildfire risk. Current wildfire science and technology is fragmented and software is either unable to function at scale or hidden in a black box. The Pyregence Consortium provides electric utilities and others with free and open source access to software tools for forecasting wildfire activity.
+                        The <a href="/forecast">active fire forecast tool</a> provides real-time fire spread forecasts that are automatically updated as hot spots are sensed by satellites. Additionally, risk from future fires ignited up to 5 days in the future is quantified by modeling hundreds of millions of hypothetical fires ignited across California.
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -214,10 +214,10 @@
                     </div>
                 </div>
                 <div class="col-md-7">
-                    <h3 class="text-white">Wildfire Scenarios</h3>
+                    <h3 class="text-white">Climate Change & Fire</h3>
                     <div class="white-line my-3"></div>
                     <p class="text-white">
-                        We are faced with a challenging ‘new normal’: an increased risk of megafires potentially resulting in catastrophic impacts to society over the coming century. The Pyregence consortium will develop wildfire scenarios under a changing climate to inform climate mitigation and adaptation planning for a more safe, cost-effective, reliable and resilient electric utility grid
+                        We are faced with a challenging ‘new normal’: an increased risk of megafires potentially resulting in catastrophic impacts to society over the coming century. The Pyregence consortium will develop wildfire scenarios under a changing climate to inform climate mitigation and adaptation planning.
                     </p>
                 </div>
                 <div class="col-md-3 text-center">
@@ -335,40 +335,13 @@
             </div>
         </div>
     </div>
-    <div class="jumbotron bg-brown mb-0">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <div class="d-block text-center gpl mb-4">
-                        <img src="images/gpl-logo.svg" alt="GPL free software logo">
-                    </div>
-                    <h3 class="text-white text-center mb-0">Everything open source because it’s good</h3>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-1 py-3">
-                    <div class="yellow-line small my-3"></div>
-                </div>
-            </div>
-            <div class="row justify-content-center">
-                <div class="col-md-8">
-                    <p class="text-white text-justify">
-                        The Pyregence Consortium is committed to transparency and reproducibility throughout our systems because we recognize these as necessary ingredients for successful science-based decision making. No one should trust a black box, and that is why all of our software from our weather pipeline and high performance fire forecast models to our dynamic web interface is being developed and released under the strongest open source license currently available: the <a href="https://www.gnu.org/licenses/gpl-3.0.en.html" target="_blank">GNU General Public License version 3 (GPLv3)</a>. The GPLv3 software license ensures that any contributions to Pyregence's tools will remain in the open source domain indefinitely and may be reused and improved upon by the next generation of modelers, programmers, and fire scientists.
-                    </p>
-                    <div class="d-flex justify-content-center py-3">
-                        <a href="https://github.com/pyregence" class="btn border-yellow text-white text-center">Github</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
     <div class="jumbotron topomap py-5 mb-0">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 px-4">
                     <h4>Disclaimer</h4>
                     <p class="text-justify">
-                        The Pyregence project is sponsored in large part by the California Energy Commission. It does not necessarily represent the views of the Energy Commission, its employees, or the State of California. Neither the Commission, the State of California, nor the Commission's employees, contractors, or subcontractors makes any warranty, express or implied, or assumes any legal liability for the information in this document; nor does any party represent that the use of this information will not infringe upon privately owned rights. Forecast Tools are open source, offered as-is, without warranty and liability for damages is expressly disclaimed. At this time, the Forecast Tools are under development and should not be relied on for any fire-safety decision.
+                        The Pyregence project is sponsored in large part by the California Energy Commission. It does not necessarily represent the views of the Energy Commission, its employees, or the State of California. Neither the Commission, the State of California, nor the Commission's employees, contractors, or subcontractors makes any warranty, express or implied, or assumes any legal liability for the information in this document; nor does any party represent that the use of this information will not infringe upon privately owned rights.
                     </p>
                 </div>
                 <div class="col-md-6 px-4">
