--- a/resources/html/~header.html
+++ b/resources/html/~header.html
@@ -29,10 +29,10 @@
                             <a href="/documents" class="nav-link">documents</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
-                            <a href="/data" class="nav-link">data</a>
+                            <a href="https://data.pyregence.org" class="nav-link">data</a>
                         </li>
-                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-data" class="nav-item">
-                            <a href="/forecast" class="nav-link">tools</a>
+                        <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-forecasts" class="nav-item">
+                            <a href="/forecast" class="nav-link">forecasts</a>
                         </li>
                         <li itemscope="itemscope" itemtype="https://www.schema.org/SiteNavigationElement" id="menu-item-team" class="nav-item">
                             <a href="/team" class="nav-link">team</a>
