Updates to data.html

--- a/resources/html/data.html
+++ b/resources/html/data.html
@@ -30,10 +30,40 @@
             <div class="row">
                 <article class="col-lg-4 col-md-6 mb-4 px-3">
                     <div class="data-single">
-                        <h3><a href="downloads/data/EPC18-026_Task6_near_term_data_archive1_14_2020.pdf" target="_blank">Near Term Fire Risk Forecast Data Archive and Dataset</a></h3>
+                        <h3>
+                        <a href="downloads/data/EPC18-026_Task6_near_term_data_archive1_14_2020.pdf" target="_blank">
+                            Near Term Fire Risk Forecast Data Archive and Dataset
+                        </a>
+                        </h3>
                         <div class="line yellow"></div>
                         <p>
                             The purpose of the Near-term Fire Risk Forecast Data Archive and Dataset is to establish a centralized repository for disseminating native format geospatial data related to real-time fire spread and risk forecasting. Submitted January 17, 2020.
+                        </p>
+                    </div>
+                </article>
+                <article class="col-lg-4 col-md-6 mb-4 px-3">
+                    <div class="data-single">
+                        <h3>
+                            <a href="downloads/data/EPC18-026_Task3_wx_station_network_dataset_D_Final.pdf" target="_blank">
+                                Weather Station Network Dataset
+                            </a>
+                        </h3>
+                        <div class="line yellow"></div>
+                        <p>
+                            The purpose of the Weather Station Network Dataset is to establish a central document outlining the location of all geospatial data related to the optimization of the location of weather stations. The dataset supports the development of a routine to optimize  placement of additional weather stations across the State of California, to best represent critical weather components with respect to California's electrical system.
+                        </p>
+                    </div>
+                </article>
+                <article class="col-lg-4 col-md-6 mb-4 px-3">
+                    <div class="data-single">
+                        <h3>
+                            <a href="downloads/data/LongTermDataset_06262020.pdf" target="_blank">
+                                Long-Term Risk Projections Dataset
+                            </a>
+                        </h3>
+                        <div class="line yellow"></div>
+                        <p>
+                            The purpose of the long-term fire risk projections dataset is to establish a repository for disseminating and documenting data for use in model development.
                         </p>
                     </div>
                 </article>
