--- a/resources/html/documents.html
+++ b/resources/html/documents.html
@@ -46,7 +46,7 @@
                 <div class="row">
                     <div class="col-md-4 document-meta mb-3">
                         <h3>Product Management Plan</h3>
-                        <a href="downloads/documents/product-management-plan.pdf" class="btn border-yellow" target="_blank">Download</a>
+                        <a href="downloads/documents/Draft_CECProduct Management Plan_V003.pdf" class="btn border-yellow" target="_blank">Download</a>
                     </div>
                     <div class="col-md-8">
                         <p>
@@ -59,7 +59,7 @@
                 <div class="row">
                     <div class="col-md-4 document-meta mb-3">
                         <h3>State of Wildfire Science Report: Limitations in Modelling Modern Wildfire Behavior</h3>
-                        <a href="downloads/documents/EPC18-026_Task5_State_Of_Wildfire_Science_Report_Submitted_1_17_2020.pdf" class="btn border-yellow" target="_blank">Download</a>
+                        <a href="downloads/documents/EPC18-026_Task5_State_Of_Wildfire_Science_Report_V2_Submitted_1_17_2020.pdf" class="btn border-yellow" target="_blank">Download</a>
                     </div>
                     <div class="col-md-8">
                         <p>
