Changed Team to About. Hiding Documents nav item temporarily. Updated Data page.

--- a/resources/html/about.html
+++ b/resources/html/about.html
@@ -12,18 +12,13 @@
         <div class="container d-flex">
             <div class="row align-items-center my-5">
                 <div class="col-md-12 my-5">
-                    <h1>Teams</h1>
+                    <h1>About</h1>
                 </div>
             </div>
         </div>
     </header>
     <section class="team-intro">
         <div class="container">
-            <div class="row">
-                <div class="col-md-12 px-4">
-                    <h2>About Us</h2>
-                </div>
-            </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 px-4">
                     <p class="text-justify">
