--- a/resources/html/data.html
+++ b/resources/html/data.html
@@ -19,7 +19,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <p class="subtitle text-center">
-                        This page provides download access to data that are being used to support the Pyregence project. Datasets will be posted to this page as soon as they have been vetted by the Pyregence Team
+                        This page provides download access to data that are being used to support the Pyregence project. Datasets will be posted to this page as soon as they have been vetted by the Pyregence Team.
                     </p>
                 </div>
             </div>
@@ -28,43 +28,64 @@
     <section class="data mb-5">
         <div class="container">
             <div class="row">
-                <article class="col-lg-4 col-md-6 mb-4 px-3">
+                <article class="col-lg-12 mb-4 px-3">
                     <div class="data-single">
                         <h3>
-                            <a href="downloads/data/EPC18-026_Task6_near_term_data_archive1_14_2020_v2.pdf" target="_blank">
-                                Near Term Fire Risk Forecast Data Archive and Dataset
-                            </a>
+                            Near-term Wildfire Forecast Data (Workgroup #3)
                         </h3>
                         <div class="line yellow"></div>
-                        <p>
-                            The purpose of the Near-term Fire Risk Forecast Data Archive and Dataset is to establish a centralized repository for disseminating native format geospatial data related to real-time fire spread and risk forecasting. Submitted January 17, 2020.
-                        </p>
-                    </div>
-                </article>
-                <article class="col-lg-4 col-md-6 mb-4 px-3">
-                    <div class="data-single">
-                        <h3>
-                            <a href="downloads/data/EPC18-026_Task3_wx_station_network_dataset_D_Final.pdf" target="_blank">
-                                Weather Station Network Dataset
-                            </a>
-                        </h3>
-                        <div class="line yellow"></div>
-                        <p>
-                            The purpose of the Weather Station Network Dataset is to establish a central document outlining the location of all geospatial data related to the optimization of the location of weather stations. The dataset supports the development of a routine to optimize  placement of additional weather stations across the State of California, to best represent critical weather components with respect to California's electrical system.
-                        </p>
-                    </div>
-                </article>
-                <article class="col-lg-4 col-md-6 mb-4 px-3">
-                    <div class="data-single">
-                        <h3>
-                            <a href="downloads/data/LongTermDataset_06262020.pdf" target="_blank">
-                                Long-Term Risk Projections Dataset
-                            </a>
-                        </h3>
-                        <div class="line yellow"></div>
-                        <p>
-                            The purpose of the long-term fire risk projections dataset is to establish a repository for disseminating and documenting data for use in model development.
-                        </p>
+                        <h4>
+                            Datasets that are currently used, or planned for inclusion into near-term forecast models, include:
+                        </h4>
+                        <ul>
+                            <li>
+                                Fuel and topography rasters for all static inputs required by current-generation fire spread models.
+                            </li>
+                            <li>
+                                5-day fire weather forecasts refreshed every 6 hours, that provide hourly meteorological inputs and fuel moisture content values necessary to drive real-time fire spread/risk forecasts.
+                            </li>
+                            <li>
+                                16-day forecasts of conventional National Fire Danger Rating System (NFDRS) indices.
+                            </li>
+                            <li>
+                                Structure density raster.
+                            </li>
+                            <li>
+                                National Agriculture Imagery Program (NAIP) orthoimagery.
+                            </li>
+                            <li>
+                                Real-time National Weather Service (NWS) red flag warning and fire weather watch polygons.
+                            </li>
+                            <li>
+                                Real-time locations of ongoing large fires identified by the National Interagency Fire Center (NIFC).
+                            </li>
+                            <li>
+                                Near real time fire progression mapping data from the National Infrared Operations (NIROPS) and GeoMAC (Geospatial Multi-Agency Coordination).
+                            </li>
+                            <li>
+                                Near real time satellite-based fire detection data from Terra/Aqua Moderate Resolution Imaging Spectroradiometer (MODIS) and Suomi National Polar-orbiting Partnership (NPP) Visible Infrared Imaging Radiometer Suite (VIIRS).
+                            </li>
+                            <li>
+                                Fire progression data for selected recent fires of historical significance in California. • Archived weather forecast or analysis data for the above fires of historical significance.
+                            </li>
+                            <li>
+                                Publicly accessible maps of electricity assets and damage to electricity assets from wildfire.
+                            </li>
+                        </ul>
+                        <h4>
+                            Data can be accessed from the following links
+                        </h4>
+                        <ul>
+                            <li>
+                                Interactive data exploration - <a href="https://pyregence.org/forecast" target="_blank">pyregence.org/forecast</a>
+                            </li>
+                            <li>
+                                Near-term Forecast Data - <a href="https://data.pyregence.org" target="_blank">data.pyregence.org</a>
+                            </li>
+                            <li>
+                                Geospatial data can be accessed from GeoServer - <a href="https://data.pyregence.org:8443/geoserver" target="_blank">data.pyregence.org:8443/geoserver</a>
+                            </li>
+                        </ul>  
                     </div>
                 </article>
             </div>
